# nibble

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  _typos.toml  cliff.toml
.githooks/: pre-commit
src/: error.rs  main.rs  style.rs  tui.rs
src/widgets/: block.rs  buttons.rs  confirm.rs  gauge.rs  input.rs  mod.rs  table.rs
