[package]
name = "nibble-rs"
version = "0.0.4"
edition = "2024"
description = "A tool for glamorous shell scripts. Quick, inline TUI components built with Ratatui—no full-screen takeover, just small bites of interaction. "
authors = ["Vaishnav-Sabari-Girish forgamesonly684@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vaishnav-Sabari-Girish/nibble"
keywords = ["tui", "ratatui"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "README.md",
  "LICENSE*",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde_json = "1.0.145"
thiserror = "2.0.17"
tui-input = "0.14.0"

[[bin]]
name = "nibble"
path = "src/main.rs"
